# aa_control

./: .gitignore  Cargo.toml  Cargo_toml  README.md
aa/: Cargo.toml
aa/src/: constants.rs  lib.rs
aa/src/gui/: mod.rs
aa/src/gui/interface/: mod.rs
aa_vst2_plugin/: Cargo.toml
aa_vst2_plugin/src/: lib.rs
ag/: Cargo.toml
ag/src/: lib.rs
ag/src/graphics/: audio_graph.rs  mod.rs
ag/src/native/: audio_graph.rs  configuration.rs  content.rs  layout_node.rs  mod.rs  node.rs  ports.rs  state.rs  title_bar.rs
ag/src/style/: style.rs
standalone/: Cargo.toml
standalone/src/: main.rs
