[package]
name = "aa"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["logging"]
logging = ["dirs", "log", "log-panics", "simplelog"]
standalone = []

[dependencies]

serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0.61" }
serde_repr = { version = "0.1.6" }

cfg-if = "1"

lopdf = "0.26.0"
svg = "0.8.0"
chrono = "0.4"

portaudio = "0.7.0"
midir = { git = "https://github.com/bgaster/midir", rev = "62466b93b6d61f735333304e93f117ede9b8ff91" }

aa_wasmtime = { path = "../../aa_wasmtime"}

anyhow = { version = "1.0.32" }
thiserror = { version = "1.0.20" }

#vst = "0.2"

vst = { path = "../../vst-rs"}

# Logging

dirs = { version = "3", optional = true}
log = { version = "0.4", optional = true, default-features = false }
log-panics = { version = "2", optional = true }
simplelog = { version = "0.9.0", optional = true, default-features = false }

# GUI
baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", branch = "main", features = ["canvas", "image"] }
iced_audio = { git = "https://github.com/BillyDM/iced_audio.git", branch = "main" }
raw-window-handle = "0.3"
