[package]
name = "aa_vst2_plugin"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aa"
crate-type = ["cdylib"]

[dependencies]
vst = "0.2"
aa = { path = "../aa" }

[features]
logging = ["aa/logging"]