[package]
name = "aa_vst2_plugin"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aacontrol"
crate-type = ["cdylib"]

[dependencies]
vst = { path = "../../vst-rs" }
aa = { path = "../aa" }

[features]
logging = ["aa/logging"]