[package]
name = "ag"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 
#  Logging

dirs = { version = "3", optional = true}
log = { version = "0.4", optional = true, default-features = false }
log-panics = { version = "2", optional = true }
simplelog = { version = "0.9.0", optional = true, default-features = false }

# GUI
baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", branch = "main", features = ["canvas", "image"] }
iced_audio = { path = "../../playground/iced_audio" }
iced_native = "0.3"
iced_graphics = { version = "0.1", features = ["canvas"] }