[package]
name = "standalone"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", branch = "main", features = ["canvas"] }
aa = { path = "../aa", features = ["logging"] }
simplelog = { version = "0.9.0", default-features = false }

vst = { path = "../../vst-rs"}
